tests/pos/i19007/RunConfigurationBase.java
public abstract class RunConfigurationBase<T> extends UserDataHolderBase implements RunConfiguration {
  @Override
  public RunConfiguration clone() {
    return null;
  }
}